@@ -3508,18 +3508,13 @@ def getmaskingstatus(mycpv):
 	rValue = []
 
 	# profile checking
-	if profiledir:
-		syslist = []
-		for l in grabfile(profiledir+"/packages"):
-			if l[0] == "*":
-				syslist.append(l[1:])
-			else:
-				syslist.append(l)
-		for pkg in syslist:
-			if pkg.find(mysplit[0]+"/"+mysplit[1]) >= 0 and not match_to_list(mycpv, [pkg]):
+	revmaskdict=settings.prevmaskdict
+	if revmaskdict.has_key(mycp):
+		for x in revmaskdict[mycp]:
+			if not match_to_list(mycpv, [x]):
 				rValue.append("profile")
 				break
-	
+
 	# package.mask checking
 	maskdict=settings.pmaskdict
 	unmaskdict=settings.punmaskdict
